traces/bug_206.txt
examples++-mpi/MUMPS_FreeFem.cpp:743: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/MUMPS_FreeFem.cpp:743:8: Write of unused value
741.   	      
742.   	      int commSize;	    
743.   	      ierr=MPI_Comm_size(comm,&commSize);
              ^
744.   	      commSize=commSize-1;
745.   	      int myidpar=myid-1;
